--- a/edit/photos.html
+++ b/edit/photos.html
@@ -3381,7 +3381,7 @@
        <div class="_z4lmgp">
         <div role="dialog" aria-label="Photo edit modal" aria-modal="true" class="modal-caption _1nvgts7s" style="position: relative;">
          <div class="_pa35zs">
-          <button aria-label="Close" type="button" class="_oda838" id="close-modal-caption">
+          <button aria-label="Close" type="button" class="btn-close" id="close-modal-caption">
            <span class="relative">
             <svg
              viewBox="0 0 32 32"
@@ -3525,7 +3525,7 @@
        <div class="_z4lmgp">
         <div role="dialog" aria-label="Add additional photos to your gallery" aria-modal="true" class="modal-add-photo _244p2lw" style="position: relative;">
          <div class="_pa35zs">
-          <button aria-label="Close" type="button" class="_oda838" id="close-modal-add-photo">
+          <button aria-label="Close" type="button" class="btn-close" id="close-modal-add-photo">
            <span class="relative">
             <svg
              viewBox="0 0 32 32"
@@ -4278,7 +4278,7 @@
        <div class="_z4lmgp">
         <div role="dialog" aria-label="Add additional photos to your gallery" aria-modal="true" class="modal-manage _244p2lw" style="position: relative;">
          <div class="_pa35zs">
-          <button aria-label="Close" type="button" class="_oda838" id="close-modal-manage">
+          <button aria-label="Close" type="button" class="btn-close" id="close-modal-manage">
            <span class="relative">
             <svg
              viewBox="0 0 32 32"
