--- a/edit/what.html
+++ b/edit/what.html
@@ -1649,7 +1649,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
          <div class="_z4lmgp">
           <div role="dialog" aria-label="Add dish" aria-modal="true" class="_1ucy1zjv modal-options" style="position: relative;">
            <div class="_pa35zs">
-            <button aria-label="Close" type="button" class="_oda838" id="close-modal-options">
+            <button aria-label="Close" type="button" class="btn-close" id="close-modal-options">
              <span class="relative">
               <svg
                viewBox="0 0 32 32"
@@ -3980,7 +3980,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
          <div class="_z4lmgp">
           <div role="dialog" aria-label="Examples" aria-modal="true" class="modal-examples _1ucy1zjv" style="position: relative;">
            <div class="_pa35zs">
-            <button aria-label="Close" type="button" class="_oda838" id="close-modal-examples">
+            <button aria-label="Close" type="button" class="btn-close" id="close-modal-examples">
              <span class="relative">
               <svg
                viewBox="0 0 32 32"
