--- a/help/feedback.html
+++ b/help/feedback.html
@@ -151,7 +151,7 @@
                         data-testid="header-search-overlay-trigger"
                         aria-haspopup="dialog"
                         type="button"
-                        class="_oda838"
+                        class="btn-close"
                         id="open-modal-help"
                       >
                         <span class="relative"
@@ -1228,7 +1228,7 @@
           <div role="dialog" aria-label="Search help" aria-modal="true" class="modal-help _1iw81xea" style="position: relative;">
            <div class="c40xpfg dir dir-ltr" data-testid="search-bar-overlay-content">
             <span class="i772rby dir dir-ltr">
-             <button aria-label="Close" data-testid="search-bar-overlay-close-button" type="button" class="_oda838" id="close-modal-help">
+             <button aria-label="Close" data-testid="search-bar-overlay-close-button" type="button" class="btn-close" id="close-modal-help">
               <span class="relative">
                <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;"><g fill="none"><path d="m20 28-11.29289322-11.2928932c-.39052429-.3905243-.39052429-1.0236893 0-1.4142136l11.29289322-11.2928932"></path></g></svg>
               </span>
