--- a/help/searching-for-stays.html
+++ b/help/searching-for-stays.html
@@ -93,7 +93,7 @@
                   </div>
                   <div class="s10j8jbx dir dir-ltr">
                     <button aria-label="Search how-tos and more" data-testid="header-search-overlay-trigger"
-                      aria-haspopup="dialog" type="button" class="_oda838">
+                      aria-haspopup="dialog" type="button" class="btn-close">
                       <span class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" style="
                               display: block;
                               fill: none;
