--- a/landing-pages/accessibility.html
+++ b/landing-pages/accessibility.html
@@ -1247,7 +1247,7 @@
        <div class="_z4lmgp">
         <div role="dialog" aria-label="Full list of accessibility search filters" aria-modal="true" class="modal-filter-list _dsadsad" style="position: relative;">
          <div class="_pa35zs">
-          <button aria-label="Close" type="button" class="_oda838" id="close-modal-filter-list">
+          <button aria-label="Close" type="button" class="btn-close" id="close-modal-filter-list">
            <span class="relative">
             <svg
              viewBox="0 0 32 32"
