--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -16064,7 +16064,7 @@
                               <div role="dialog" aria-label="Property overview" aria-modal="true" class="_14oeh8k8">
                                 <div class="_xgxxi4">
                                   <div class="_1kpxj8f"><button data-button="close" aria-label="Close" type="button"
-                                      class="_oda838"><span class="relative"><svg viewBox="0 0 32 32"
+                                      class="btn-close"><span class="relative"><svg viewBox="0 0 32 32"
                                           xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                           focusable="false"
                                           style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
@@ -16075,7 +16075,7 @@
                                           </g>
                                         </svg></span></button></div>
                                   <div>
-                                    <div class="block"><button aria-label="Share" type="button" class="_oda838"><span
+                                    <div class="block"><button aria-label="Share" type="button" class="btn-close"><span
                                           class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                             aria-hidden="true" role="presentation" focusable="false"
                                             style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
@@ -19774,7 +19774,7 @@
                               <div role="dialog" aria-label="Property overview" aria-modal="true" class="_14oeh8k8">
                                 <div class="_xgxxi4">
                                   <div class="_1kpxj8f"><button data-button="close" aria-label="Close" type="button"
-                                      class="_oda838"><span class="relative"><svg viewBox="0 0 32 32"
+                                      class="btn-close"><span class="relative"><svg viewBox="0 0 32 32"
                                           xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                           focusable="false"
                                           style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
@@ -24305,7 +24305,7 @@
             <div role="dialog" aria-label="Questions about this home?" aria-modal="true" class="_244p2lw modal-msg"
               style="position: relative;">
               <div class="_pa35zs">
-                <button aria-label="Close" type="button" class="_oda838" id="close-modal-msg">
+                <button aria-label="Close" type="button" class="btn-close" id="close-modal-msg">
                   <span class="relative">
                     <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                       focusable="false"
