--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -7902,7 +7902,7 @@
                                       <button
                                         aria-label="Close"
                                         type="button"
-                                        class="_oda838"
+                                        class="btn-close"
                                         data-button="close"
                                       >
                                         <span class="relative"
@@ -7935,7 +7935,7 @@
                                         <button
                                           aria-label="Share"
                                           type="button"
-                                          class="_oda838"
+                                          class="btn-close"
                                           data-modal="#share-modal-mobile"
                                         >
                                           <span class="relative"
@@ -13228,7 +13228,7 @@
                 style="position: relative"
               >
                 <div class="modal__close">
-                  <button data-button="close" aria-label="Close" type="button" class="_oda838">
+                  <button data-button="close" aria-label="Close" type="button" class="btn-close">
                     <span class="carousel-slider__item-wrap"
                       ><svg
                         viewBox="0 0 32 32"
@@ -16517,7 +16517,7 @@
         <div class="_z4lmgp">
           <div role="dialog" aria-label="Select dates and guests" aria-modal="true" class="_zyit6ap"
             style="position: relative;">
-            <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span
+            <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="btn-close"><span
                   class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                     role="presentation" focusable="false"
                     style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;">
