--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -11384,7 +11384,7 @@
                                                                                         aria-disabled="true"
                                                                                         aria-label="Move backward to switch to the previous month."
                                                                                         disabled="" type="button"
-                                                                                        class="_oda838"><span
+                                                                                        class="btn-close"><span
                                                                                           class="relative"><svg
                                                                                             viewBox="0 0 18 18"
                                                                                             role="presentation"
@@ -11400,7 +11400,7 @@
                                                                                         aria-disabled="false"
                                                                                         aria-label="Move forward to switch to the next month."
                                                                                         type="button"
-                                                                                        class="_oda838"><span
+                                                                                        class="btn-close"><span
                                                                                           class="relative"><svg
                                                                                             viewBox="0 0 18 18"
                                                                                             role="presentation"
@@ -16222,7 +16222,7 @@
                               <div role="dialog" aria-label="" aria-modal="true" class="_14oeh8k8">
                                 <div class="_xgxxi4">
                                   <div class="_1kpxj8f">
-                                    <button aria-label="Close" type="button" class="_oda838" data-button="close">
+                                    <button aria-label="Close" type="button" class="btn-close" data-button="close">
                                       <span class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                           aria-hidden="true" role="presentation" focusable="false" style="
                                                   display: block;
@@ -16243,7 +16243,7 @@
                                   </div>
                                   <div>
                                     <div class="block">
-                                      <button aria-label="Share" type="button" class="_oda838"
+                                      <button aria-label="Share" type="button" class="btn-close"
                                         data-modal="#share-modal">
                                         <span class="relative"><svg viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
@@ -19128,7 +19128,7 @@
           <div class="contents">
             <div role="dialog" aria-modal="true" class="_ojerypf" style="position: relative">
               <div class="modal__close">
-                <button data-button="close" aria-label="Close" type="button" class="_oda838">
+                <button data-button="close" aria-label="Close" type="button" class="btn-close">
                   <span class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                       aria-hidden="true" role="presentation" focusable="false" style="
                               display: block;
@@ -21382,7 +21382,7 @@
                               <div role="dialog" aria-label="" aria-modal="true" class="_14oeh8k8">
                                 <div class="_xgxxi4">
                                   <div class="_1kpxj8f">
-                                    <button data-button="close" aria-label="Close" type="button" class="_oda838">
+                                    <button data-button="close" aria-label="Close" type="button" class="btn-close">
                                       <span class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                           aria-hidden="true" role="presentation" focusable="false" style="
                                               display: block;
@@ -27501,7 +27501,7 @@
           <div class="_z4lmgp">
             <div role="dialog" aria-label="Service animals" aria-modal="true" class="_1ucy1zjv"
               style="position: relative;">
-              <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span
+              <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="btn-close"><span
                     class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                       role="presentation" focusable="false"
                       style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;">
@@ -27904,7 +27904,7 @@
           <div class="_z4lmgp">
             <div role="dialog" aria-label="Select dates and guests" aria-modal="true" class="_zyit6ap"
               style="position: relative;">
-              <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span
+              <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="btn-close"><span
                     class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                       role="presentation" focusable="false"
                       style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;">
@@ -29271,7 +29271,7 @@
             <div role="dialog" aria-label="Base Price Breakdown" aria-modal="true" class="modal-price-breakdown _ewwxwe"
               style="position: absolute; top: 468px; right: 606.25px; transform-origin: right top;">
               <div class="_1wv4knt">
-                <button aria-label="Close" type="button" class="_oda838" id="close-modal-price-breakdown">
+                <button aria-label="Close" type="button" class="btn-close" id="close-modal-price-breakdown">
                   <span class="relative">
                     <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                       focusable="false"
