--- a/loaders/messages-loader.html
+++ b/loaders/messages-loader.html
@@ -330,7 +330,7 @@
                                   </div>
                                   <div class="_1kuqh4ka"><span>
                                       <div style="height: 16px;"><button aria-label="Archive" type="button"
-                                          class="_oda838"><span class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32"
+                                          class="btn-close"><span class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32"
                                               xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                               focusable="false"
                                               style="display: block; height: 16px; width: 16px; fill: currentcolor;">
@@ -341,7 +341,7 @@
                                     </span></div>
                                   <div class="_1mqc21n" data-testid="c3pi.toggle.details">
                                     <div class="_1y6xiyp"><button data-panel-details-sm="#thread_details_panel_1"
-                                        aria-label="Details" type="button" class="_oda838"><span class="carousel-slider__item-wrap"><svg
+                                        aria-label="Details" type="button" class="btn-close"><span class="carousel-slider__item-wrap"><svg
                                             viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                             role="presentation" focusable="false"
                                             style="display: block; height: 16px; width: 16px; fill: rgb(34, 34, 34);">
@@ -786,7 +786,7 @@
                                   </div>
                                   <div class="_1kuqh4ka"><span>
                                       <div style="height: 16px;"><button aria-label="Archive" type="button"
-                                          class="_oda838"><span class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32"
+                                          class="btn-close"><span class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32"
                                               xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                               focusable="false"
                                               style="display: block; height: 16px; width: 16px; fill: currentcolor;">
@@ -1065,7 +1065,7 @@
                                     </div>
                                   </div>
                                   <div class="_1kuqh4ka"><span><button data-modal="#translation-modal" aria-label="Translation on"
-                                        data-testid="translate-button" type="button" class="_oda838"><span
+                                        data-testid="translate-button" type="button" class="btn-close"><span
                                           class="carousel-slider__item-wrap"><svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"
                                             aria-hidden="true" role="presentation" focusable="false"
                                             style="display: block; height: 16px; width: 16px; fill: currentcolor;">
@@ -1075,7 +1075,7 @@
                                           </svg></span></button></span></div>
                                   <div class="_1kuqh4ka"><span>
                                       <div style="height: 16px;"><button aria-label="Archive" type="button"
-                                          class="_oda838"><span class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32"
+                                          class="btn-close"><span class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32"
                                               xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                               focusable="false"
                                               style="display: block; height: 16px; width: 16px; fill: currentcolor;">
@@ -1086,7 +1086,7 @@
                                     </span></div>
                                   <div class="_1mqc21n" data-testid="c3pi.toggle.details">
                                     <div class="_1y6xiyp"><button data-panel-details-sm="#thread_details_panel_2"
-                                        aria-label="Details" type="button" class="_oda838"><span class="carousel-slider__item-wrap"><svg
+                                        aria-label="Details" type="button" class="btn-close"><span class="carousel-slider__item-wrap"><svg
                                             viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                             role="presentation" focusable="false"
                                             style="display: block; height: 16px; width: 16px; fill: rgb(34, 34, 34);">
@@ -1306,7 +1306,7 @@
                                   </div>
                                   <div class="_1kuqh4ka"><span>
                                       <div style="height: 16px;"><button aria-label="Archive" type="button"
-                                          class="_oda838"><span class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32"
+                                          class="btn-close"><span class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32"
                                               xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                               focusable="false"
                                               style="display: block; height: 16px; width: 16px; fill: currentcolor;">
@@ -1680,7 +1680,7 @@
                                     </div>
                                     <div class="_4qc6zu" data-testid="thread_details_close"><button data-button="close"
                                         aria-label="Close the details panel and return to the conversation"
-                                        id="thread_details_close" type="button" class="_oda838"><span
+                                        id="thread_details_close" type="button" class="btn-close"><span
                                           class="carousel-slider__item-wrap"><svg viewBox="0 0 12 12" role="presentation"
                                             aria-hidden="true" focusable="false"
                                             style="height: 14px; width: 14px; display: block; fill: currentcolor;">
@@ -1801,7 +1801,7 @@
                                   </div>
                                   <div class="_4qc6zu" data-testid="thread_details_close"><button data-button="close"
                                       aria-label="Close the details panel and return to the conversation"
-                                      id="thread_details_close" type="button" class="_oda838"><span class="carousel-slider__item-wrap"><svg
+                                      id="thread_details_close" type="button" class="btn-close"><span class="carousel-slider__item-wrap"><svg
                                           viewBox="0 0 12 12" role="presentation" aria-hidden="true" focusable="false"
                                           style="height: 14px; width: 14px; display: block; fill: currentcolor;">
                                           <path
@@ -1848,7 +1848,7 @@
           <div class="_z4lmgp">
             <div role="dialog" aria-label="Translation" aria-modal="true" class="_ewwxwe"
               style="position: absolute; top: 134.609px; right: 186px; transform-origin: right top;">
-              <div class="_1wv4knt"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span
+              <div class="_1wv4knt"><button data-button="close" aria-label="Close" type="button" class="btn-close"><span
                     class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                       role="presentation" focusable="false"
                       style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;">
@@ -1903,7 +1903,7 @@
           <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
           <div class="_z4lmgp">
             <div role="dialog" aria-label="Translation" aria-modal="true" class="_1pusc02v" style="position: relative;">
-              <div class="modal__close"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span class="carousel-slider__item-wrap"><svg
+              <div class="modal__close"><button data-button="close" aria-label="Close" type="button" class="btn-close"><span class="carousel-slider__item-wrap"><svg
                       viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                       focusable="false"
                       style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;">
