--- a/messaging/inbox.html
+++ b/messaging/inbox.html
@@ -2291,7 +2291,7 @@
             <div class="contents">
               <div role="dialog" aria-label="Filter messages" aria-modal="true" class="modal-dialog__content-wrapper" style="position: relative;">
                 <div class="modal__close">
-                  <button aria-label="Close" type="button" class="_oda838" id="show-filter-modal__close">
+                  <button aria-label="Close" type="button" class="btn-close" id="show-filter-modal__close">
                     <span class="relative">
                       <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
                         <path d="m6 6 20 20"></path>
@@ -2426,7 +2426,7 @@
             <div class="contents">
               <div role="dialog" aria-label="Filter by Experiences" aria-modal="true" class="modal-dialog__content-wrapper" style="position: relative;">
                 <div class="modal__close">
-                  <button aria-label="Back" type="button" class="_oda838" id="show-filter-experience-modal__close">
+                  <button aria-label="Back" type="button" class="btn-close" id="show-filter-experience-modal__close">
                     <span class="relative">
                       <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
                         <g fill="none">
