--- a/messaging/messages.html
+++ b/messaging/messages.html
@@ -547,7 +547,7 @@
                                   </div>
                                   <div class="_1kuqh4ka"><span>
                                       <div style="height: 16px;"><button aria-label="Archive" type="button"
-                                          class="_oda838"><span class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32"
+                                          class="btn-close"><span class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32"
                                               xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                               focusable="false"
                                               style="display: block; height: 16px; width: 16px; fill: currentcolor;">
@@ -558,7 +558,7 @@
                                     </span></div>
                                   <div class="_1mqc21n" data-testid="c3pi.toggle.details">
                                     <div class="_1y6xiyp"><button data-panel-details-sm="#thread_details_panel_1"
-                                        aria-label="Details" type="button" class="_oda838"><span class="carousel-slider__item-wrap"><svg
+                                        aria-label="Details" type="button" class="btn-close"><span class="carousel-slider__item-wrap"><svg
                                             viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                             role="presentation" focusable="false"
                                             style="display: block; height: 16px; width: 16px; fill: rgb(34, 34, 34);">
@@ -1003,7 +1003,7 @@
                                   </div>
                                   <div class="_1kuqh4ka"><span>
                                       <div style="height: 16px;"><button aria-label="Archive" type="button"
-                                          class="_oda838"><span class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32"
+                                          class="btn-close"><span class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32"
                                               xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                               focusable="false"
                                               style="display: block; height: 16px; width: 16px; fill: currentcolor;">
@@ -1282,7 +1282,7 @@
                                     </div>
                                   </div>
                                   <div class="_1kuqh4ka"><span><button data-modal="#translation-modal" aria-label="Translation on"
-                                        data-testid="translate-button" type="button" class="_oda838"><span
+                                        data-testid="translate-button" type="button" class="btn-close"><span
                                           class="carousel-slider__item-wrap"><svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"
                                             aria-hidden="true" role="presentation" focusable="false"
                                             style="display: block; height: 16px; width: 16px; fill: currentcolor;">
@@ -1292,7 +1292,7 @@
                                           </svg></span></button></span></div>
                                   <div class="_1kuqh4ka"><span>
                                       <div style="height: 16px;"><button aria-label="Archive" type="button"
-                                          class="_oda838"><span class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32"
+                                          class="btn-close"><span class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32"
                                               xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                               focusable="false"
                                               style="display: block; height: 16px; width: 16px; fill: currentcolor;">
@@ -1303,7 +1303,7 @@
                                     </span></div>
                                   <div class="_1mqc21n" data-testid="c3pi.toggle.details">
                                     <div class="_1y6xiyp"><button data-panel-details-sm="#thread_details_panel_2"
-                                        aria-label="Details" type="button" class="_oda838"><span class="carousel-slider__item-wrap"><svg
+                                        aria-label="Details" type="button" class="btn-close"><span class="carousel-slider__item-wrap"><svg
                                             viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                             role="presentation" focusable="false"
                                             style="display: block; height: 16px; width: 16px; fill: rgb(34, 34, 34);">
@@ -1523,7 +1523,7 @@
                                   </div>
                                   <div class="_1kuqh4ka"><span>
                                       <div style="height: 16px;"><button aria-label="Archive" type="button"
-                                          class="_oda838"><span class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32"
+                                          class="btn-close"><span class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32"
                                               xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                               focusable="false"
                                               style="display: block; height: 16px; width: 16px; fill: currentcolor;">
@@ -1897,7 +1897,7 @@
                                     </div>
                                     <div class="_4qc6zu" data-testid="thread_details_close"><button data-button="close"
                                         aria-label="Close the details panel and return to the conversation"
-                                        id="thread_details_close" type="button" class="_oda838"><span
+                                        id="thread_details_close" type="button" class="btn-close"><span
                                           class="carousel-slider__item-wrap"><svg viewBox="0 0 12 12" role="presentation"
                                             aria-hidden="true" focusable="false"
                                             style="height: 14px; width: 14px; display: block; fill: currentcolor;">
@@ -1944,7 +1944,7 @@
                                     </div>
                                     <div class="_4qc6zu" data-testid="thread_details_close"><button data-button="close"
                                         aria-label="Close the details panel and return to the conversation"
-                                        id="thread_details_close" type="button" class="_oda838"><span
+                                        id="thread_details_close" type="button" class="btn-close"><span
                                           class="carousel-slider__item-wrap"><svg viewBox="0 0 12 12" role="presentation"
                                             aria-hidden="true" focusable="false"
                                             style="height: 14px; width: 14px; display: block; fill: currentcolor;">
@@ -2365,7 +2365,7 @@
                                 </div>
                                 <div class="_1kuqh4ka"><span>
                                     <div style="height: 16px;"><button aria-label="Archive" type="button"
-                                        class="_oda838"><span class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32"
+                                        class="btn-close"><span class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                             focusable="false"
                                             style="display: block; height: 16px; width: 16px; fill: currentcolor;">
@@ -2808,7 +2808,7 @@
                                 </div>
                                 <div class="_1kuqh4ka"><span>
                                     <div style="height: 16px;"><button aria-label="Archive" type="button"
-                                        class="_oda838"><span class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32"
+                                        class="btn-close"><span class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                             focusable="false"
                                             style="display: block; height: 16px; width: 16px; fill: currentcolor;">
@@ -3101,7 +3101,7 @@
                                       </div>
                                     </div>
                                     <button data-modal="#translation-modal-md" aria-label="Translation on"
-                                      data-testid="translate-button" type="button" class="_oda838">
+                                      data-testid="translate-button" type="button" class="btn-close">
                                       <span class="carousel-slider__item-wrap"><svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"
                                           aria-hidden="true" role="presentation" focusable="false"
                                           style="display: block; height: 16px; width: 16px; fill: currentcolor;">
@@ -3115,7 +3115,7 @@
                                 </div>
                                 <div class="_1kuqh4ka"><span>
                                     <div style="height: 16px;"><button aria-label="Archive" type="button"
-                                        class="_oda838"><span class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32"
+                                        class="btn-close"><span class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                             focusable="false"
                                             style="display: block; height: 16px; width: 16px; fill: currentcolor;">
@@ -3334,7 +3334,7 @@
                                 </div>
                                 <div class="_1kuqh4ka"><span>
                                     <div style="height: 16px;"><button aria-label="Archive" type="button"
-                                        class="_oda838"><span class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32"
+                                        class="btn-close"><span class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                             focusable="false"
                                             style="display: block; height: 16px; width: 16px; fill: currentcolor;">
@@ -3683,7 +3683,7 @@
                                   </div>
                                   <div class="_4qc6zu" data-testid="thread_details_close"><button data-button="close"
                                       aria-label="Close the details panel and return to the conversation"
-                                      id="thread_details_close" type="button" class="_oda838"><span class="carousel-slider__item-wrap"><svg
+                                      id="thread_details_close" type="button" class="btn-close"><span class="carousel-slider__item-wrap"><svg
                                           viewBox="0 0 12 12" role="presentation" aria-hidden="true" focusable="false"
                                           style="height: 14px; width: 14px; display: block; fill: currentcolor;">
                                           <path
@@ -3708,7 +3708,7 @@
                                   </div>
                                   <div class="_4qc6zu" data-testid="thread_details_close"><button data-button="close"
                                       aria-label="Close the details panel and return to the conversation"
-                                      id="thread_details_close" type="button" class="_oda838"><span class="carousel-slider__item-wrap"><svg
+                                      id="thread_details_close" type="button" class="btn-close"><span class="carousel-slider__item-wrap"><svg
                                           viewBox="0 0 12 12" role="presentation" aria-hidden="true" focusable="false"
                                           style="height: 14px; width: 14px; display: block; fill: currentcolor;">
                                           <path
@@ -3753,7 +3753,7 @@
                                   </div>
                                   <div class="_4qc6zu" data-testid="thread_details_close"><button data-button="close"
                                       aria-label="Close the details panel and return to the conversation"
-                                      id="thread_details_close" type="button" class="_oda838"><span class="carousel-slider__item-wrap"><svg
+                                      id="thread_details_close" type="button" class="btn-close"><span class="carousel-slider__item-wrap"><svg
                                           viewBox="0 0 12 12" role="presentation" aria-hidden="true" focusable="false"
                                           style="height: 14px; width: 14px; display: block; fill: currentcolor;">
                                           <path
@@ -3874,7 +3874,7 @@
                                   </div>
                                   <div class="_4qc6zu" data-testid="thread_details_close"><button data-button="close"
                                       aria-label="Close the details panel and return to the conversation"
-                                      id="thread_details_close" type="button" class="_oda838"><span class="carousel-slider__item-wrap"><svg
+                                      id="thread_details_close" type="button" class="btn-close"><span class="carousel-slider__item-wrap"><svg
                                           viewBox="0 0 12 12" role="presentation" aria-hidden="true" focusable="false"
                                           style="height: 14px; width: 14px; display: block; fill: currentcolor;">
                                           <path
@@ -4167,7 +4167,7 @@
           <div class="_z4lmgp">
             <div role="dialog" aria-label="Translation" aria-modal="true" class="_ewwxwe"
               style="position: absolute; top: 134.609px; right: 186px; transform-origin: right top;">
-              <div class="_1wv4knt"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span
+              <div class="_1wv4knt"><button data-button="close" aria-label="Close" type="button" class="btn-close"><span
                     class="carousel-slider__item-wrap"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                       role="presentation" focusable="false"
                       style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;">
@@ -4222,7 +4222,7 @@
           <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
           <div class="_z4lmgp">
             <div role="dialog" aria-label="Translation" aria-modal="true" class="_1pusc02v" style="position: relative;">
-              <div class="modal__close"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span class="carousel-slider__item-wrap"><svg
+              <div class="modal__close"><button data-button="close" aria-label="Close" type="button" class="btn-close"><span class="carousel-slider__item-wrap"><svg
                       viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                       focusable="false"
                       style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;">
