--- a/online-experience/dashboard.html
+++ b/online-experience/dashboard.html
@@ -1382,7 +1382,7 @@
          <div class="_z4lmgp">
           <div role="dialog" aria-label="Tasks" aria-modal="true" class="modal-show-all _1ucy1zjv" style="position: relative;">
            <div class="_pa35zs">
-            <button aria-label="Close" type="button" class="_oda838" id="close-modal-show-all">
+            <button aria-label="Close" type="button" class="btn-close" id="close-modal-show-all">
              <span class="relative">
               <svg
                viewBox="0 0 32 32"
