--- a/become-a-host/title.html
+++ b/become-a-host/title.html
@@ -502,7 +502,7 @@ Cheerful private villa with pool</textarea
          <div class="_z4lmgp">
           <div role="dialog" aria-label="Ask a Superhost" aria-modal="true" class="_5wyy9re modal-dp" style="position: absolute; top: 82px; right: 242.172px; transform-origin: right top;">
            <div class="_1wv4knt">
-            <button aria-label="Close" type="button" class="_oda838" id="close-modal-dp">
+            <button aria-label="Close" type="button" class="btn-close" id="close-modal-dp">
              <span class="relative">
               <svg
                viewBox="0 0 32 32"
@@ -529,7 +529,7 @@ Cheerful private villa with pool</textarea
             </div>
             <div class="_rrmdgl">
              <div class="_5kaapu">
-              <button aria-label="More details" type="button" class="_oda838">
+              <button aria-label="More details" type="button" class="btn-close">
                <span class="relative">
                 <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 16px; width: 16px; fill: currentcolor;">
                  <path d="M3 6a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm5 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm5 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4z"></path>
@@ -710,7 +710,7 @@ Cheerful private villa with pool</textarea
          <div class="_z4lmgp">
           <div role="dialog" aria-label="Ask a Superhost" aria-modal="true" class="modal-dp-m _iwziubj" style="position: relative;">
            <div class="_pa35zs">
-            <button aria-label="Close" type="button" class="_oda838" id="close-modal-dp-m">
+            <button aria-label="Close" type="button" class="btn-close" id="close-modal-dp-m">
              <span class="relative">
               <svg
                viewBox="0 0 32 32"
@@ -737,7 +737,7 @@ Cheerful private villa with pool</textarea
             </div>
             <div class="_rrmdgl">
              <div class="_5kaapu">
-              <a target="_blank" aria-label="More details" href="/messaging/thread/1257117527?thread_type=host_referral" class="_oda838">
+              <a target="_blank" aria-label="More details" href="/messaging/thread/1257117527?thread_type=host_referral" class="btn-close">
                <span class="relative">
                 <svg
                  viewBox="0 0 32 32"
@@ -1056,7 +1056,7 @@ Cheerful private villa with pool</textarea
          <div class="_z4lmgp">
           <div role="dialog" aria-label="Are you sure you want to exit?" aria-modal="true" class="modal-save-exit _1m9khubh" style="position: relative;">
            <div class="_1wv4knt">
-            <button aria-label="Close" type="button" class="_oda838" id="close-modal-save-exit">
+            <button aria-label="Close" type="button" class="btn-close" id="close-modal-save-exit">
              <span class="relative">
               <svg
                viewBox="0 0 32 32"
