--- a/help/ticket-selection.html
+++ b/help/ticket-selection.html
@@ -151,7 +151,7 @@
                         data-testid="header-search-overlay-trigger"
                         aria-haspopup="dialog"
                         type="button"
-                        class="_oda838"
+                        class="btn-close"
                       >
                         <span class="relative"
                           ><svg
