--- a/landing-pages/covidsafety.html
+++ b/landing-pages/covidsafety.html
@@ -2539,7 +2539,7 @@
          <div class="_z4lmgp">
           <div role="dialog" aria-label="Who is required to follow the new safety and cleaning guidelines?" aria-modal="true" class="modal-faq-0 _wheg71v" style="position: relative;">
            <div class="_pa35zs">
-            <button aria-label="Close" type="button" class="_oda838" id="close-modal-faq-0">
+            <button aria-label="Close" type="button" class="btn-close" id="close-modal-faq-0">
              <span class="relative">
               <svg
                viewBox="0 0 32 32"
@@ -2595,7 +2595,7 @@
          <div class="_z4lmgp">
           <div role="dialog" aria-label="How do I change or cancel an existing reservation?" aria-modal="true" class="modal-faq-1 _wheg71v" style="position: relative;">
            <div class="_pa35zs">
-            <button aria-label="Close" type="button" class="_oda838" id="close-modal-faq-1">
+            <button aria-label="Close" type="button" class="btn-close" id="close-modal-faq-1">
              <span class="relative">
               <svg
                viewBox="0 0 32 32"
@@ -2651,7 +2651,7 @@
          <div class="_z4lmgp">
           <div role="dialog" aria-label="What COVID-19 policies have been created for Airbnb Experiences?" aria-modal="true" class="modal-faq-2 _wheg71v" style="position: relative;">
            <div class="_pa35zs">
-            <button aria-label="Close" type="button" class="_oda838" id="close-modal-faq-2">
+            <button aria-label="Close" type="button" class="btn-close" id="close-modal-faq-2">
              <span class="relative">
               <svg
                viewBox="0 0 32 32"
@@ -2708,7 +2708,7 @@
          <div class="_z4lmgp">
           <div role="dialog" aria-label="What kind of flexible booking options are available on Airbnb?" aria-modal="true" class="modal-faq-3 _wheg71v" style="position: relative;">
            <div class="_pa35zs">
-            <button aria-label="Close" type="button" class="_oda838" id="close-modal-faq-3">
+            <button aria-label="Close" type="button" class="btn-close" id="close-modal-faq-3">
              <span class="relative">
               <svg
                viewBox="0 0 32 32"
