--- a/loaders/products-loader.html
+++ b/loaders/products-loader.html
@@ -5032,7 +5032,7 @@
                           <div class="contents">
                             <div role="dialog" aria-label="" aria-modal="true" class="_14oeh8k8">
                               <div class="_xgxxi4">
-                                <div class="_1kpxj8f"><button aria-label="Close" type="button" class="_oda838" data-button='close'><span
+                                <div class="_1kpxj8f"><button aria-label="Close" type="button" class="btn-close" data-button='close'><span
                                       class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                         aria-hidden="true" role="presentation" focusable="false"
                                         style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
@@ -5043,7 +5043,7 @@
                                         </g>
                                       </svg></span></button></div>
                                 <div>
-                                  <div class="block"><button aria-label="Share" type="button" class="_oda838"><span
+                                  <div class="block"><button aria-label="Share" type="button" class="btn-close"><span
                                         class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                           aria-hidden="true" role="presentation" focusable="false"
                                           style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
@@ -6851,7 +6851,7 @@
                           <div class="contents">
                             <div role="dialog" aria-label="" aria-modal="true" class="_14oeh8k8">
                               <div class="_xgxxi4">
-                                <div class="_1kpxj8f"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span
+                                <div class="_1kpxj8f"><button data-button="close" aria-label="Close" type="button" class="btn-close"><span
                                       class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                         aria-hidden="true" role="presentation" focusable="false"
                                         style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
