--- a/online-experience/insights.html
+++ b/online-experience/insights.html
@@ -3734,7 +3734,7 @@
          <div class="_z4lmgp">
           <div role="dialog" aria-label="Date range" aria-modal="true" class="_ewwxwe modal-date-range" style="position: absolute; top: 207px; left: 390.5px; transform-origin: left top;">
            <div class="_1wv4knt">
-            <button aria-label="Close" type="button" class="_oda838" id="close-modal-date-range">
+            <button aria-label="Close" type="button" class="btn-close" id="close-modal-date-range">
              <span class="relative">
               <svg
                viewBox="0 0 32 32"
@@ -3805,7 +3805,7 @@
                <div style="--gp-section-max-width: 1120px;">
                 <div data-plugin-in-point-id="EXPERIENCES_HOST_INSIGHTS_ISSUE_MODAL_660" data-section-id="EXPERIENCES_HOST_INSIGHTS_ISSUE_MODAL_660">
                  <div class="_pa35zs">
-                  <button aria-label="Close" type="button" class="_oda838" id="close-modal-overall">
+                  <button aria-label="Close" type="button" class="btn-close" id="close-modal-overall">
                    <span class="relative">
                     <svg
                      viewBox="0 0 32 32"
@@ -3874,7 +3874,7 @@
                <div style="--gp-section-max-width: 1120px;">
                 <div data-plugin-in-point-id="EXPERIENCES_HOST_INSIGHTS_ISSUE_MODAL_662" data-section-id="EXPERIENCES_HOST_INSIGHTS_ISSUE_MODAL_662">
                  <div class="_pa35zs">
-                  <button aria-label="Close" type="button" class="_oda838" id="close-modal-lower">
+                  <button aria-label="Close" type="button" class="btn-close" id="close-modal-lower">
                    <span class="relative">
                     <svg
                      viewBox="0 0 32 32"
