--- a/payments/payment.html
+++ b/payments/payment.html
@@ -6644,7 +6644,7 @@
                                                               "
                                                             >
                                                               <div class="_1wv4knt">
-                                                                <button aria-label="Close" type="button" class="_oda838">
+                                                                <button aria-label="Close" type="button" class="btn-close">
                                                                   <span class="relative"
                                                                     ><svg
                                                                       viewBox="0 0 32 32"
@@ -10910,7 +10910,7 @@ Thank you very much and we hope you enjoy your stay!</div>
             <div class="_z4lmgp">
               <div role="dialog" aria-label="Message the Host" aria-modal="true" class="_1ucy1zjv"
                 style="position: relative;">
-                <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span class="relative"><svg
+                <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="btn-close"><span class="relative"><svg
                         viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                         focusable="false"
                         style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;">
@@ -10982,7 +10982,7 @@ Thank you very much and we hope you enjoy your stay!</div>
             <div class="_z4lmgp">
               <div role="dialog" aria-label="Add your profile photo" aria-modal="true" class="_1ucy1zjv"
                 style="position: relative;">
-                <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span class="relative"><svg
+                <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="btn-close"><span class="relative"><svg
                         viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                         focusable="false"
                         style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;">
@@ -11045,7 +11045,7 @@ Thank you very much and we hope you enjoy your stay!</div>
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
             <div class="_z4lmgp">
               <div role="dialog" aria-label="Phone number" aria-modal="true" class="_1ucy1zjv" style="position: relative;">
-                <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span class="relative"><svg
+                <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="btn-close"><span class="relative"><svg
                         viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                         focusable="false"
                         style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;">
