--- a/submission/review.html
+++ b/submission/review.html
@@ -1462,7 +1462,7 @@
          <div class="_z4lmgp">
           <div role="dialog" aria-label="Local laws" aria-modal="true" class="modal-laws _1ucy1zjv" style="position: relative;">
            <div class="_pa35zs">
-            <button aria-label="Close" type="button" class="_oda838" id="close-modal-laws">
+            <button aria-label="Close" type="button" class="btn-close" id="close-modal-laws">
              <span class="relative">
               <svg
                viewBox="0 0 32 32"
@@ -1518,7 +1518,7 @@
          <div class="_z4lmgp">
           <div role="dialog" aria-label="Tour guiding" aria-modal="true" class="modal-tour _1ucy1zjv" style="position: relative;">
            <div class="_pa35zs">
-            <button aria-label="Close" type="button" class="_oda838" id="close-modal-tour">
+            <button aria-label="Close" type="button" class="btn-close" id="close-modal-tour">
              <span class="relative">
               <svg
                viewBox="0 0 32 32"
@@ -1577,7 +1577,7 @@
          <div class="_z4lmgp">
           <div role="dialog" aria-label="Animals" aria-modal="true" class="modal-animals _1ucy1zjv" style="position: relative;">
            <div class="_pa35zs">
-            <button aria-label="Close" type="button" class="_oda838" id="close-modal-animals">
+            <button aria-label="Close" type="button" class="btn-close" id="close-modal-animals">
              <span class="relative">
               <svg
                viewBox="0 0 32 32"
